--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/vue-fontawesome": "^3.0.8",
         "@inertiajs/inertia": "^0.11.1",
-        "@inertiajs/inertia-vue3": "^0.6.0"
+        "@inertiajs/inertia-vue3": "^0.6.0",
+        "@tinymce/tinymce-vue": "^6.0.1",
+        "quill": "^2.0.2",
+        "vue3-quill": "^0.3.1"
     }
 }
